echo-server/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo-server
spec:
  hosts:
  - echo.bobcat.devsisters.cloud
  gateways:
  - wildcard-bobcat-devsisters-cloud-gateway.istio-system
  http:
  - name: master
    route:
      - destination:
          host: echo-server-stable
        weight: 100
      - destination:
          host: echo-server-canary
        weight: 0
